GPG-390 Fixes PDF preview on mobile

--- a/GenderPayGap.WebUI/wwwroot/styles/components/_guidance.scss
+++ b/GenderPayGap.WebUI/wwwroot/styles/components/_guidance.scss
@@ -69,8 +69,6 @@
 .pdf-preview {
     
     .pdf-preview__image {
-        width: 80px;
-
         @media (min-width: map-get($govuk-breakpoints, 'tablet')) {
             float: left;
         }
@@ -78,6 +76,7 @@
     
     .pdf-preview__text {
         margin-left: 1em;
+        display: inline-block;
         width: 200px;
 
         @media (min-width: map-get($govuk-breakpoints, 'tablet')) {
